--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 
-<!doctype html>
 <!-- Declares meanMapApp as the starting Angular module -->
 <html class="no-js" ng-app="meanMapApp">
 <head>
@@ -8,19 +8,19 @@
     <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <!-- Holder JS -->
-    <script src="../bower_components/holderjs/holder.js"></script>
+    <script src="../node_modules/holderjs/holder.js"></script>
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_HERE"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSy9uWhzGErfJUxSTRNx16b8YCgYlI7Vc"></script>
     <!-- Modernizr -->
-    <script src="../bower_components/modernizr/bin/modernizr"></script>
+    <script src="../node_modules/modernizr/bin/modernizr"></script>
     <!-- JS Source -->
-    <script src="../bower_components/jquery/jquery.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/angular/angular.js"></script>
+    <script src="../node_modules/angular-route/angular-route.js"></script>
+    <script src="../node_modules/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -35,7 +35,7 @@
     <div class="row content">
         <!-- Google Map -->
         <div class="col-md-7">
-            <div id="map"><img src="holder.js/645x645"></div>
+            <div id="map"><img data-src="holder.js/645x645"></div>
         </div>
         <!-- Side Panel -->
         <div class="col-md-5">
