--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <html class="no-js" ng-app="meanMapApp">
 <head>
     <meta charset="utf-8">
-    <title>Scotch MEAN Map</title>
+    <title>Kev Test App</title>
     <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
@@ -18,13 +18,13 @@
             <li active><a href="">Join the Team</a></li>
             <li disabled><a href="">Find Teammates</a></li>
         </ul>
-        <h3 class="text-muted">The Scotch MEAN MapApp</h3>
+        <h3 class="text-muted">Kev Test App</h3>
     </div>
     <!-- Map and Side Panel -->
     <div class="row content">
         <!-- Google Map -->
         <div class="col-md-7">
-            <div id="map"><img data-src="holder.js/645x645"></div>
+            <div id="map" style="width:645px; height:645px"></div>
         </div>
         <!-- Side Panel -->
         <div class="col-md-5">
@@ -98,9 +98,6 @@
 
 <!-- Begin Scripts -->
 
-<!-- Angular -->
-<script src="js/app.js"></script>
-<script src="js/addCtrl.js"></script>
 <!-- Holder JS -->
 <script src="../node_modules/holderjs/holder.js"></script>
 <!-- Google Maps API -->
@@ -112,6 +109,12 @@
 <script src="../node_modules/angular/angular.js"></script>
 <script src="../node_modules/angular-route/angular-route.js"></script>
 <script src="../node_modules/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+<!-- Google Maps Factory Service -->
+<script src="./assets/js/gservice.js"></script>
+<!-- Angular -->
+<script src="./assets/js/app.js"></script>
+<script src="./assets/js/addCtrl.js"></script>
+
 
 <!-- End Scripts -->
 
