--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 <!-- Angular -->
 <script src="./assets/js/app.js"></script>
 <script src="./assets/js/addCtrl.js"></script>
+<script src="./assets/js/queryCtrl.js"></script>
 
 
 <!-- End Scripts -->
