mongoDB working remotely, finished and start gamegeo

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <div class="header">
         <ul class="nav nav-pills pull-right">
             <!-- Links to the two menu views included -->
-            <li active><a href="/#/join">Join the Team</a></li>
-            <li disabled><a href="/#/find">Find Teammates</a></li>
+            <li active><a href="/#/join">Join the Map!</a></li>
+            <li disabled><a href="/#/find">Find other people</a></li>
         </ul>
-        <h3 class="text-muted">The Scotch MEAN MapApp</h3>
+        <h3 class="text-muted">MEAN App Test</h3>
     </div>
     <!-- Map and Side Panel -->
     <div class="row content">
@@ -35,7 +35,7 @@
     <hr/>
     <!-- Footer -->
     <div class="footer">
-        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO -
+        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Recreated by Kevin Haas
             <a href="https://scotch.io/">App Tutorial</a> | <a href="https://github.com/afhaque/MeanMapAppV2.0">Github Repo</a></p>
     </div>
 </div>
